tests/neg-custom-args/captures/heal-tparam-cs.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:10:23 -------------------------------
10 |  val test1 = localCap { c => // error
   |                       ^
   |                       Found:    (c: Capp^) ->? box () ->{c} Unit
   |                       Required: (c: Capp^) ->{fresh} box () ->? Unit
   |
   |                       Note that reference c.type
   |                       cannot be included in outer capture set ?
11 |    () => { c.use() }
12 |  }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:15:13 -------------------------------
15 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^?) ->? () ->{x$0} Unit
   |    Required: (c: Capp^) -> () ->{localcap} Unit
16 |      (c1: Capp^) => () => { c1.use() }
17 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:20:13 -------------------------------
20 |    localCap { c =>  // error (???) since change to cs mapping
   |    ^
   |    Found:    (x$0: Capp^?) ->? () ->{x$0} Unit
   |    Required: (c: Capp^{io}) -> () ->{io} Unit
   |
   |    Note that the existential capture root in () ->? Unit
   |    cannot subsume the capability <cap of (c1: Capp^?): () ->{c1} Unit>
21 |      (c1: Capp^{io}) => () => { c1.use() }
22 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:25:13 -------------------------------
25 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^?) ->? () ->{x$0} Unit
   |    Required: (c: Capp^{io}) -> () ->{net} Unit
   |
   |    Note that the existential capture root in () ->? Unit
   |    cannot subsume the capability <cap of (c1: Capp^?): () ->{c1} Unit>
26 |      (c1: Capp^{io}) => () => { c1.use() }
27 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:41:4 --------------------------------
41 |    io => () => io.use()  // error
   |    ^^^^^^^^^^^^^^^^^^^^
   |    Found:    (io: Capp^) ->? () ->{io} Unit
   |    Required: (io: Capp^) -> () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:44:4 --------------------------------
44 |    io => () => io.use()  // error
   |    ^^^^^^^^^^^^^^^^^^^^
   |    Found:    (io: Capp^) ->? () ->{io} Unit
   |    Required: (io: Capp^) -> () -> Unit
   |
   | longer explanation available when compiling with `-explain`
